force-app/main/default/objects/Form_LCF_Setup_Stakeholder_1__c/Form_LCF_Setup_Stakeholder_1__c.object-meta.xml
<CustomObject>
    <description>Life Chances Fund - Full Award Set-Up - Stakeholder - 1.0</description>
    <label>Form LCF Setup Stakeholder 1.0</label>
    <nameField>
        <displayFormat>STK-{00000}</displayFormat>
        <label>Stakeholder ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form LCF Setup Stakeholder 1.0</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>