force-app/main/default/objects/Form_LCF_Setup_Stakeholder_1__c/fields/st_engagement_detail__c.field-meta.xml
<CustomField>
    <fullName>st_engagement_detail__c</fullName>
    <inlineHelpText>Please explain the level of engagement in more detail</inlineHelpText>
    <label>ST - Engagement Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>