force-app/main/default/objects/Form_LCF_Setup_Stakeholder_1__c/fields/st_engagement_level__c.field-meta.xml
<CustomField>
    <fullName>st_engagement_level__c</fullName>
    <inlineHelpText>What level of engagement does the stakeholder have with the project?</inlineHelpText>
    <label>ST - Engagement Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-principle or informal interest</fullName>
            </value>
            <value>
                <fullName>Post in-principle, undertaking due diligence</fullName>
            </value>
            <value>
                <fullName>Selecting or procuring</fullName>
            </value>
            <value>
                <fullName>Procured or confirmed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>