force-app/main/default/objects/Form_LCF_Setup_Stakeholder_1__c/fields/st_lead_contact_daytime_phone__c.field-meta.xml
<CustomField>
    <fullName>st_lead_contact_daytime_phone__c</fullName>
    <inlineHelpText>Daytime number</inlineHelpText>
    <label>ST - Lead Contact Daytime Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>