force-app/main/default/objects/Form_LCF_Setup_Stakeholder_1__c/fields/st_lead_contact_mobile__c.field-meta.xml
<CustomField>
    <fullName>st_lead_contact_mobile__c</fullName>
    <inlineHelpText>Mobile number</inlineHelpText>
    <label>ST - Lead Contact Mobile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>