force-app/main/default/objects/Form_LCF_Setup_Stakeholder_1__c/fields/st_lead_contact_name__c.field-meta.xml
<CustomField>
    <fullName>st_lead_contact_name__c</fullName>
    <inlineHelpText>Name</inlineHelpText>
    <label>ST - Lead Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>