force-app/main/default/objects/Form_LCF_Setup_Stakeholder_1__c/fields/st_organisation_name__c.field-meta.xml
<CustomField>
    <fullName>st_organisation_name__c</fullName>
    <inlineHelpText>What is the organisation name of the stakeholder?</inlineHelpText>
    <label>ST - Organisation Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>