force-app/main/default/objects/Form_LCF_Setup_Stakeholder_1__c/fields/st_organisation_other_sector__c.field-meta.xml
<CustomField>
    <fullName>st_organisation_other_sector__c</fullName>
    <inlineHelpText>If Other, please specify the organisation sector in words</inlineHelpText>
    <label>ST - Organisation Other Sector</label>
    <length>255</length>
    <type>Text</type>
</CustomField>