force-app/main/default/objects/Form_LCF_Setup_Stakeholder_1__c/fields/st_organisation_sector__c.field-meta.xml
<CustomField>
    <fullName>st_organisation_sector__c</fullName>
    <inlineHelpText>What sector is the stakeholder from?</inlineHelpText>
    <label>ST - Organisation Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>Charitable</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>