force-app/main/default/objects/Form_LCF_Setup_Stakeholder_1__c/fields/st_organisation_type__c.field-meta.xml
<CustomField>
    <fullName>st_organisation_type__c</fullName>
    <inlineHelpText>What type of organisation is the stakeholder?</inlineHelpText>
    <label>ST - Organisation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commissioner</fullName>
            </value>
            <value>
                <fullName>Investor</fullName>
            </value>
            <value>
                <fullName>Service provider</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>